# development_initializer

./: .gitignore  Cargo.toml  README.md
docs/: ideas.md  initial.md  rework.md
src/: branch.rs  cli.rs  config.rs  db.rs  editor.rs  environment.rs  errors.rs  goto  main.rs  request.rs
src/branch/: add.rs  default.rs  edit.rs  list.rs  mod.rs  remove.rs  set.rs  view.rs
src/db/: alias.rs  mod.rs  project.rs  settings.rs
