[package]
name = "devinit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.34", features = ["derive"] }
dialoguer = "0.11.0"
directories = "6.0.0"
edit = "0.1.5"
open = "5.3.2"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.20"

